--- a/core/templates/ep.html
+++ b/core/templates/ep.html
@@ -109,18 +109,18 @@ Ejecución presupuestaria municipal {{ municipio }}
                 {% for row in rubros %}                                                     
                 <tr>                                                                        
                     <td>{{ row.tipoingreso__clasificacion }}</td>                                    
-                    <td class="text-right">{{ row.asignado|million|intcomma }}</td>                                    
+                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>                                    
                     <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>                                   
-                    {% if row.asignado %}                                                   
-                        <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
+                    {% if row.inicial_asignado %}                                                   
+                        <td class="montos">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1 }}%</td>
                     {% endif %}                                                             
                 </tr>                                                                       
                 {% endfor %}                                                                
                 <tr class="success bold">                                                   
                     <td>TOTAL</td>                                                          
-                    <td class="text-right">{{ rubros|total_sum:'asignado'|million|intcomma }}</td>
+                    <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
                     <td class="text-right">{{ rubros|total_sum:'ejecutado'|million|intcomma }}</td>
-                    {% with sum_asignado=rubros|total_sum:'asignado' %}
+                    {% with sum_asignado=rubros|total_sum:'inicial_asignado' %}
                         <td class="text-right">
                             {% if sum_asignado %}
                                 {{ rubros|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:1|intcomma}}
