--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -234,11 +234,19 @@
                             {% endif %}
                         </tr>
                     {% endfor %}
-                    <!--tr class="success">
+                    <tr class="success">
                         <td colspan="2">TOTAL</td>
-                        <td class="text-right">{{ otros|total_sum:'asignado'|floatformat:2 }}</td>
-                        <td class="text-right">{{ otros|total_sum:'ejecutado'|floatformat:2 }}</td>
-                    </tr-->
+                        <td class="text-right">
+                        {% with numerator=otros|total_sum:'asignado' denominator=otros|total_sum:'poblacion' %}
+                        {{ numerator|div:denominator|floatformat:2|intcomma }}
+                        {% endwith %}
+                        </td>
+                        <td class="text-right">
+                        {% with numerator=otros|total_sum:'ejecutado' denominator=otros|total_sum:'poblacion' %}
+                        {{ numerator|div:denominator|floatformat:2|intcomma }}
+                        {% endwith %}
+                        </td>
+                    </tr>
                 </table>
                 </div>
             {% endif %}
