Luyenda de raqui - no es millones de cordobas

--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -166,7 +166,7 @@
             <div class="col-md-5">
             	{% descargar_excel "icat4" %}
                 <h3>Ranquin de municipio de misma categoría municipal</h3>
-                <h4 class="text-info">Millones de córdobas corrientes por habitante</h4>
+                <h4 class="text-info">Córdobas corrientes por habitante</h4>
                 <table class="table table-condensed">
                     <tr class="info"><th>Posición</th><th>Municipios</th> <th>P. Inicial</th> <th>Ejecución</th></tr>
                     {% for row in otros %}
