corrigiendo titulo en tbala de pocentaje del gasto

--- a/core/templates/personal.html
+++ b/core/templates/personal.html
@@ -119,7 +119,7 @@
     <div class="col-md-5">
     <!-- javier 7/junio gftabla1 -->
     <h3>Ranquin de municipio de misma categoría municipal</h3>
-    <h4 class="text-info">Porcentaje del gasto total destinado a gastos de funcionamiento</h4>
+    <h4 class="text-info">Porcentaje del gasto total destinado a gastos de personal</h4>
     <table class="table table-condensed">
         <tr class="info"><th>Posición</th><th>Municipios</th> <th>P. Inicial</th> <th>Ejecución</th></tr>
     {% for row in otros %}
