ningun cambio realmente

--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -382,7 +382,7 @@
         <!-- /fin oim-tabla5 -->
         <!-- maribeli 20/07 oim-tabla6 -->
         {% descargar_excel "oim5" %}
-        <h3>Modificacion al presupuesto municipal del ingreso - Recaudación municipal</h3>
+        <h3>Modificaciones al presupuesto municipal del ingreso - Recaudación municipal</h3>
         <h4 class="text-info">Millones de córdobas corrientes</h4>
         <table class="table table-condensed">
             <tr><td></td><td></td><td colspan="4" class="success text-center"><h4>Modificación al {{ year_data.actualizado }}</h4></td><td colspan="4" class="danger"><h4>Modificación al {{ year_data.final }}</h4></td></tr>
