Comentando grafico historico aci...haremos uno que tenga mas logica?

--- a/core/templates/aci.html
+++ b/core/templates/aci.html
@@ -415,6 +415,6 @@ Ahorro corriente para inversiones  {{ municipio }}
         </div>
         <!-- /fin acitabla7 -->
         <br clear="all" >
-        <div id='chart' class="col-md-10"> Chart will be rendered here </div>
+        <!--div id='chart' class="col-md-10"> Chart will be rendered here </div-->
     </div>
 {% endblock %}
