corrigiendo rotulo de tabla personal

--- a/core/templates/personal.html
+++ b/core/templates/personal.html
@@ -387,7 +387,7 @@
     <!-- javier 7/junio gftabla4 -->
     {% descargar_excel "gp4" %}
     <h3>Modificación al presupuesto municipios categoría '{{ mi_clase.clasificacion }}'</h3>
-    <h4 class="text-info">Millones de córdobas destinado a gastos de funcionamiento por categoría de Municipios</h4>
+    <h4 class="text-info">Millones de córdobas destinado a gastos de personal por categoría de Municipios</h4>
     <table  class="table table-condensed">
       <tr>
         <td></td>
