resuelve problemas de totales de aci http://redmine.guegue.com/issues/1630

--- a/core/templates/aci.html
+++ b/core/templates/aci.html
@@ -63,14 +63,14 @@ Ahorro corriente para inversiones  {{ municipio }}
                         {% for row in porclasep %}
                         <tr>
                             <td>{{ row.clasificacion }}</td>
-                            <td class="tex-center">{% if row.asignado %}{{ row.asignado|floatformat:2 }}{% else %} 0 {% endif %}</td>
-                            <td>{% if row.ejecutado %}{{ row.ejecutado|floatformat:2 }} {% else %} 0 {% endif %}</td>
+                            <td class="tex-center">{% if row.asignado %}{{ row.asignado|floatformat:2 }}{% else %} 0 {% endif %}%</td>
+                            <td>{% if row.ejecutado %}{{ row.ejecutado|floatformat:2 }} {% else %} 0 {% endif %}%</td>
                         </tr>
                         {% endfor %}
                         <tr class="success">
                             <td><strong>TOTAL</strong></td>
-                            <td><strong>{{ porclasep|total_sum:'asignado'|floatformat:2 }}</strong></td>
-                            <td><strong>{{ porclasep|total_sum:'ejecutado'|floatformat:2 }}</strong></td>
+                            <td><strong>{{ porclasep|total_avg:'asignado'|floatformat:2 }}%</strong></td>
+                            <td><strong>{{ porclasep|total_avg:'ejecutado'|floatformat:2 }}%</strong></td>
                         </tr>
                     </table>
                 </div>
@@ -97,8 +97,8 @@ Ahorro corriente para inversiones  {{ municipio }}
                     {% endfor %}
                     <tr class="success">
                         <td>TOTAL</td>
-                        <td class="text-right">{{ otros|total_sum:'asignado'|floatformat:2 }}</td>
-                        <td class="text-right">{{ otros|total_sum:'ejecutado'|floatformat:2 }}</td>
+                        <td class="text-right">{{ otros|total_avg:'asignado'|floatformat:2 }}%</td>
+                        <td class="text-right">{{ otros|total_avg:'ejecutado'|floatformat:2 }}%</td>
                     </tr>
                 </table>
             </div>
@@ -118,7 +118,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                     <td>{{ row.inicial_asignado|million|intcomma }}</td>                                    
                     <td>{{ row.ejecutado|million|intcomma }}</td>                                   
                     {% if row.inicial_asignado %}                                                   
-                        <td class="montos">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1 }}%</td>
+                        <td class="montos">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:2 }}%</td>
                     {% endif %}                                                             
                 </tr>                                                                       
                 {% endfor %}                                                                
@@ -129,7 +129,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                     {% with sum_asignado=rubros|total_sum:'inicial_asignado' %}
                         <td class="text-right">
                             {% if sum_asignado %}
-                                {{ rubros|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:1|intcomma}}
+                                {{ rubros|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:2|intcomma}}%
                             {% endif %}
                         </td>
                     {% endwith %}
@@ -151,7 +151,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                     <td>{{ row.inicial_asignado|million|intcomma }}</td>                                    
                     <td>{{ row.ejecutado|million|intcomma }}</td>                                   
                     {% if row.inicial_asignado %}                                                   
-                        <td class="montos">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1 }}%</td>
+                        <td class="montos">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:2 }}%</td>
                     {% endif %}                                                             
                 </tr>                                                                       
                 {% endfor %}                                                                
@@ -162,7 +162,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                     {% with sum_asignado=rubrosg|total_sum:'inicial_asignado' %}
                         <td>
                             {% if sum_asignado %}
-                                {{ rubrosg|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:1|intcomma}}
+                                {{ rubrosg|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:2|intcomma}}%
                             {% endif %}
                         </td>
                     {% endwith %}
@@ -204,7 +204,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                       {{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
                     {% if row.actualizado_asignado %}
-                      <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                      <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:2|intcomma }}%</td>
                     {% else %}
                       <td class="success montos">0</td>
                     {% endif %}
@@ -213,7 +213,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                       {{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="danger text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
                     {% if row.final_asignado %}
-                       <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                       <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:2|intcomma }}%</td>
                     {% endif %}
                 </tr>
             {% endfor %}
@@ -234,7 +234,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                 {% with sum_actualizado=rubros|total_sum:'actualizado_asignado' %}
                     <td class="montos text-right">
                         {% if sum_actualizado %}
-                        {{ rubros|total_sum:'actualizado_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}%
+                        {{ rubros|total_sum:'actualizado_ejecutado'|div:sum_actualizado|mul:100|floatformat:2|intcomma}}%
                         {% endif %}
                     </td>
                 {% endwith %}
@@ -253,7 +253,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                 {% with sum_actualizado=rubros|total_sum:'final_asignado' %}
                     <td class="montos text-right">
                         {% if sum_actualizado %}
-                        {{ rubros|total_sum:'final_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}%
+                        {{ rubros|total_sum:'final_ejecutado'|div:sum_actualizado|mul:100|floatformat:2|intcomma}}%
                         {% endif %}
                     </td>
                 {% endwith %}
@@ -294,7 +294,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                       {{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
                     {% if row.actualizado_asignado %}
-                      <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                      <td class="success montos">{{ row.actualizado_ejecutado|div:row.actualizado_asignado|mul:100|floatformat:2|intcomma }}%</td>
                     {% else %}
                       <td class="success montos">0</td>
                     {% endif %}
@@ -303,7 +303,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                       {{ row.final_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="danger text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
                     {% if row.final_asignado %}
-                       <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:1|intcomma }}%</td>
+                       <td class="danger montos">{{ row.final_ejecutado|div:row.final_asignado|mul:100|floatformat:2|intcomma }}%</td>
                     {% endif %}
                 </tr>
             {% endfor %}
@@ -324,7 +324,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                 {% with sum_actualizado=rubrosg|total_sum:'actualizado_asignado' %}
                     <td class="montos text-right">
                         {% if sum_actualizado %}
-                        {{ rubrosg|total_sum:'actualizado_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}%
+                        {{ rubrosg|total_sum:'actualizado_ejecutado'|div:sum_actualizado|mul:100|floatformat:2|intcomma}}%
                         {% endif %}
                     </td>
                 {% endwith %}
@@ -343,7 +343,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                 {% with sum_actualizado=rubrosg|total_sum:'final_asignado' %}
                     <td class="montos text-right">
                         {% if sum_actualizado %}
-                        {{ rubrosg|total_sum:'final_ejecutado'|div:sum_actualizado|mul:100|floatformat:1|intcomma}}%
+                        {{ rubrosg|total_sum:'final_ejecutado'|div:sum_actualizado|mul:100|floatformat:2|intcomma}}%
                         {% endif %}
                     </td>
                 {% endwith %}
@@ -367,7 +367,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                     <td>{{ row.asignado|million|intcomma }}</td>
                     <td>{{ row.ejecutado|million|intcomma }}</td>
                     {% if row.asignado %}
-                        <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
+                        <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:2 }}%</td>
                     {% endif %}
                  </tr>
                 {% endfor %}
@@ -377,7 +377,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                     <td>{{ anuales|total_sum:'ejecutado'|million|intcomma }}</td>
                     {% with total_sum_asignado=anuales|total_sum:'asignado' %}
                     {% if total_sum_asignado %}
-                        <td class="montos">{{ anuales|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:1 }}%</td>
+                        <td class="montos">{{ anuales|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:2 }}%</td>
                     {% endif %}
                     {% endwith %}
                 </tr>
@@ -397,7 +397,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                     <td>{{ row.asignado|million|intcomma }}</td>
                     <td>{{ row.ejecutado|million|intcomma }}</td>
                     {% if row.asignado %}
-                        <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:1 }}%</td>
+                        <td class="montos">{{ row.ejecutado|div:row.asignado|mul:100|floatformat:2 }}%</td>
                     {% endif %}
                  </tr>
                 {% endfor %}
@@ -407,7 +407,7 @@ Ahorro corriente para inversiones  {{ municipio }}
                     <td>{{ anualesg|total_sum:'ejecutado'|million|intcomma }}</td>
                     {% with total_sum_asignado=anualesg|total_sum:'asignado' %}
                     {% if total_sum_asignado %}
-                        <td class="montos">{{ anualesg|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:1 }}%</td>
+                        <td class="montos">{{ anualesg|total_sum:'ejecutado'|div:total_sum_asignado|mul:100|floatformat:2 }}%</td>
                     {% endif %}
                     {% endwith %}
                 </tr>
