cambio de titulo y nota en OGM

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -464,7 +464,7 @@
         <!--maribel 20/07 ogm-tabla 8 -->
         <div class="col-md-8">
         	{% descargar_excel "ogm7" %}
-            <h3>Gastos por períodos</h3>
+            <h3>Ejecución Presupuestaria por destino de gastos. Consolidado municipal</h3>
             <h4 class="text-info">Millones de c&oacute;rdoba corrientes</h4>
             <table class="table table-condensed">
                 <tr  class="info">
@@ -488,6 +488,7 @@
                 </tr>
                 {% endfor %}
             </table>
+            <p>Nota: la ejecucion al 2016 no es de cierre.</p>
         </div>
         <!--fin ogm-tabla8 -->
       </div>
